Respect the order of items in the .docrc. Patch from the bugreport.

BUG: 133704